--- a/index.html
+++ b/index.html
@@ -46,95 +46,77 @@
     </nav>
 
     <!-- Герой секция -->
-    <section class="cosmic-hero">
-        <div class="hero-orbit">
-            <div class="orbit-path"></div>
-            <div class="satellite" id="code-satellite">
-                <div class="satellite-content">
-                    <div class="avatar cosmic-avatar">
-                        <div class="avatar-glow"></div>
-                        <img src="images/avatar-code.jpg" alt="Polysok - Разработчик" onerror="this.style.display='none'">
-                    </div>
-                    <h1 class="cosmic-title">Polysok</h1>
-                    <p class="cosmic-subtitle">Fullstack Developer</p>
-                    <p class="cosmic-description">Создаю космические решения</p>
-                    <div class="tech-constellation">
-                        <span class="tech-star">Python</span>
-                        <span class="tech-star">C#</span>
-                        <span class="tech-star">Go</span>
-                        <span class="tech-star">Unity</span>
-                    </div>
-                    <a href="portfolio.html#code" class="cosmic-btn">
-                        <span class="btn-glow"></span>
-                        Исследовать проекты
-                    </a>
+    <!-- Герой секция -->
+<section class="cosmic-hero">
+    <div class="hero-orbit">
+        <div class="orbit-path"></div>
+        
+        <!-- Первый спутник - Polysok -->
+        <div class="satellite" id="code-satellite">
+            <div class="satellite-content">
+                <div class="avatar cosmic-avatar">
+                    <div class="avatar-glow"></div>
+                    <!-- Запасной контент если изображение не загрузится -->
+                    <div class="avatar-fallback">👨‍💻</div>
                 </div>
-            </div>
-
-            <div class="satellite" id="music-satellite">
-                <div class="satellite-content">
-                    <div class="avatar cosmic-avatar">
-                        <div class="avatar-glow"></div>
-                        <img src="images/avatar-music.jpg" alt="Yuaself - Гитарист" onerror="this.style.display='none'">
-                    </div>
-                    <h1 class="cosmic-title">Yuaself</h1>
-                    <p class="cosmic-subtitle">Guitar Astronaut</p>
-                    <p class="cosmic-description">Звуки космоса в струнах</p>
-                    <div class="tech-constellation">
-                        <span class="tech-star">Progressive</span>
-                        <span class="tech-star">Math Rock</span>
-                        <span class="tech-star">Sokoninaru</span>
-                    </div>
-                    <a href="portfolio.html#music" class="cosmic-btn">
-                        <span class="btn-glow"></span>
-                        Слушать космос
-                    </a>
+                <h1 class="cosmic-title">Polysok</h1>
+                <p class="cosmic-subtitle">Fullstack Developer</p>
+                <p class="cosmic-description">Создаю космические решения</p>
+                <div class="tech-constellation">
+                    <span class="tech-star">Python</span>
+                    <span class="tech-star">C#</span>
+                    <span class="tech-star">Go</span>
+                    <span class="tech-star">Unity</span>
                 </div>
+                <a href="portfolio.html#code" class="cosmic-btn">
+                    <span class="btn-glow"></span>
+                    Исследовать проекты
+                </a>
             </div>
         </div>
 
-        <!-- Центральная планета -->
-        <div class="central-planet">
-            <div class="planet-core"></div>
-            <div class="planet-rings">
-                <div class="ring"></div>
-                <div class="ring"></div>
-                <div class="ring"></div>
-            </div>
-            <div class="planet-info">
-                <h2>Инженерно-космический</h2>
-                <p>9"И" класс</p>
-                <p>МАОУ Гимназия №32</p>
-                <p>г. Калининград</p>
+        <!-- Второй спутник - Yuaself -->
+        <div class="satellite" id="music-satellite">
+            <div class="satellite-content">
+                <div class="avatar cosmic-avatar">
+                    <div class="avatar-glow"></div>
+                    <!-- Запасной контент если изображение не загрузится -->
+                    <div class="avatar-fallback">🎸</div>
+                </div>
+                <h1 class="cosmic-title">Yuaself</h1>
+                <p class="cosmic-subtitle">Guitar Astronaut</p>
+                <p class="cosmic-description">Звуки космоса в струнах</p>
+                <div class="tech-constellation">
+                    <span class="tech-star">Progressive</span>
+                    <span class="tech-star">Math Rock</span>
+                    <span class="tech-star">Sokoninaru</span>
+                </div>
+                <a href="portfolio.html#music" class="cosmic-btn">
+                    <span class="btn-glow"></span>
+                    Слушать космос
+                </a>
             </div>
         </div>
-    </section>
+    </div>
 
-    <!-- Быстрая навигация -->
-    <section class="quick-nav">
-        <div class="container">
-            <div class="nav-cards">
-                <a href="about.html" class="nav-card">
-                    <div class="card-icon">👨‍🚀</div>
-                    <h3>Моя история</h3>
-                    <p>Эссе об авторе и пути в IT и музыке</p>
-                    <div class="card-glow"></div>
-                </a>
-                <a href="portfolio.html" class="nav-card">
-                    <div class="card-icon">🛰️</div>
-                    <h3>Проекты</h3>
-                    <p>Космические разработки и музыка</p>
-                    <div class="card-glow"></div>
-                </a>
-                <a href="contacts.html" class="nav-card">
-                    <div class="card-icon">📡</div>
-                    <h3>Связь</h3>
-                    <p>Контактные данные и соцсети</p>
-                    <div class="card-glow"></div>
-                </a>
-            </div>
+    <!-- Центральная планета -->
+    <div class="central-planet">
+        <div class="planet-core">
+            <div class="planet-glow"></div>
         </div>
-    </section>
+        <div class="planet-rings">
+            <div class="ring ring-1"></div>
+            <div class="ring ring-2"></div>
+            <div class="ring ring-3"></div>
+        </div>
+        <div class="planet-info">
+            <h2>Инженерно-космический</h2>
+            <p>9"И" класс</p>
+            <p>МАОУ Гимназия №32</p>
+            <p>г. Калининград</p>
+        </div>
+    </div>
+</section>
 
     <!-- Футер -->
     <footer class="cosmic-footer">
@@ -177,3 +159,4 @@
 </body>
 
 </html>
+
