--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
                     </div>
                 </div>
                 <div class="about-intro">
-                    <h1>Polysok <span class="accent">/</span> Yuaself</h1>
+                    <h1>Глумов <span class="accent"></span> Александр</h1>
                     <p class="subtitle">Разработчик & Музыкант</p>
                     <p class="description">
                         Ученик 9"И" инженерно-космического класса<br>
-                        МАОУ Гимназия №32 г. Калининграда
+                        МАОУ Гимназии №32 г. Калининграда
                     </p>
                 </div>
             </div>
@@ -159,19 +159,19 @@
                                 </div>
                             </div>
                             <div class="preference-item">
-                                <span class="genre">Math Rock</span>
+                                <span class="genre">Математический рок</span>
                                 <div class="preference-bar">
                                     <div class="preference-fill" style="width: 85%"></div>
                                 </div>
                             </div>
                             <div class="preference-item">
-                                <span class="genre">Японский рок</span>
+                                <span class="genre">Прогрессивный метал</span>
                                 <div class="preference-bar">
                                     <div class="preference-fill" style="width: 95%"></div>
                                 </div>
                             </div>
                             <div class="preference-item">
-                                <span class="genre">Инструментальная</span>
+                                <span class="genre">Трэш-метал</span>
                                 <div class="preference-bar">
                                     <div class="preference-fill" style="width: 80%"></div>
                                 </div>
@@ -185,7 +185,7 @@
                         <div class="contest-details">
                             <div class="detail-item">
                                 <strong>Номинация:</strong>
-                                <span>Хобби</span>
+                                <span>Хобби и увлечение</span>
                             </div>
                             <div class="detail-item">
                                 <strong>Тема работы:</strong>
@@ -220,7 +220,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>🚀 Polysok / Yuaself</h3>
+                    <h3>🚀 Глумов Александр</h3>
                     <p>Ученик 9"И" инженерно-космического класса</p>
                     <p class="school-info">МАОУ Гимназия №32 г. Калининграда</p>
                     <p class="footer-quote">"Код и музыка - мои космические корабли"</p>
@@ -245,7 +245,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Polysok / Yuaself. Запуск с планеты Земля 🪐</p>
-                <p>Сайт создан для конкурса в номинации "Хобби"</p>
+                <p>Сайт создан для конкурса в номинации "Хобби и увлечение"</p>
             </div>
         </div>
     </footer>
@@ -253,3 +253,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
