--- a/index.html
+++ b/index.html
@@ -45,51 +45,55 @@
         </div>
     </nav>
 
-    <!-- Герой секция -->
-    <section class="cosmic-hero">
-        <div class="hero-orbit">
-            <div class="orbit-path"></div>
-            <div class="satellite" id="code-satellite">
-                <div class="satellite-content">
-                    <div class="avatar cosmic-avatar">
-                        <div class="avatar-glow"></div>
-                        <img src="images/avatar-code.jpg" alt="Polysok - Разработчик" onerror="this.style.display='none'">
-                    </div>
-                    <h1 class="cosmic-title">Polysok</h1>
-                    <p class="cosmic-subtitle">Fullstack Developer</p>
-                    <p class="cosmic-description">Создаю космические решения</p>
-                    <div class="tech-constellation">
-                        <span class="tech-star">Python</span>
-                        <span class="tech-star">C#</span>
-                        <span class="tech-star">Go</span>
-                        <span class="tech-star">Unity</span>
-                    </div>
-                    <a href="portfolio.html#code" class="cosmic-btn">
-                        <span class="btn-glow"></span>
-                        Исследовать проекты
-                    </a>
+ <!-- Герой секция -->
+<section class="cosmic-hero">
+    <div class="hero-orbit">
+        <div class="orbit-path"></div>
+        
+        <!-- Первый спутник - Polysok -->
+        <div class="satellite" id="code-satellite">
+            <div class="satellite-content">
+                <div class="avatar cosmic-avatar">
+                    <div class="avatar-glow"></div>
+                    <!-- Запасной контент для аватара -->
+                    <div class="avatar-placeholder">👨‍💻</div>
                 </div>
+                <h1 class="cosmic-title">Polysok</h1>
+                <p class="cosmic-subtitle">Fullstack Developer</p>
+                <p class="cosmic-description">Создаю космические решения</p>
+                <div class="tech-constellation">
+                    <span class="tech-star">Python</span>
+                    <span class="tech-star">C#</span>
+                    <span class="tech-star">Go</span>
+                    <span class="tech-star">Unity</span>
+                </div>
+                <a href="portfolio.html#code" class="cosmic-btn">
+                    <span class="btn-glow"></span>
+                    Исследовать проекты
+                </a>
             </div>
+        </div>
 
-            <div class="satellite" id="music-satellite">
-                <div class="satellite-content">
-                    <div class="avatar cosmic-avatar">
-                        <div class="avatar-glow"></div>
-                        <img src="images/avatar-music.jpg" alt="Yuaself - Гитарист" onerror="this.style.display='none'">
-                    </div>
-                    <h1 class="cosmic-title">Yuaself</h1>
-                    <p class="cosmic-subtitle">Guitar Astronaut</p>
-                    <p class="cosmic-description">Звуки космоса в струнах</p>
-                    <div class="tech-constellation">
-                        <span class="tech-star">Progressive</span>
-                        <span class="tech-star">Math Rock</span>
-                        <span class="tech-star">Sokoninaru</span>
-                    </div>
-                    <a href="portfolio.html#music" class="cosmic-btn">
-                        <span class="btn-glow"></span>
-                        Слушать космос
-                    </a>
+        <!-- Второй спутник - Yuaself -->
+        <div class="satellite" id="music-satellite">
+            <div class="satellite-content">
+                <div class="avatar cosmic-avatar">
+                    <div class="avatar-glow"></div>
+                    <!-- Запасной контент для аватара -->
+                    <div class="avatar-placeholder">🎸</div>
                 </div>
+                <h1 class="cosmic-title">Yuaself</h1>
+                <p class="cosmic-subtitle">Guitar Astronaut</p>
+                <p class="cosmic-description">Звуки космоса в струнах</p>
+                <div class="tech-constellation">
+                    <span class="tech-star">Progressive</span>
+                    <span class="tech-star">Math Rock</span>
+                    <span class="tech-star">Sokoninaru</span>
+                </div>
+                <a href="portfolio.html#music" class="cosmic-btn">
+                    <span class="btn-glow"></span>
+                    Слушать космос
+                </a>
             </div>
         </div>
 
@@ -108,7 +112,8 @@
                 <p>г. Калининград</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Быстрая навигация -->
     <section class="quick-nav">
@@ -177,3 +182,4 @@
 </body>
 
 </html>
+
