--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -45,75 +45,149 @@
         </div>
     </nav>
 
- <!-- Герой секция -->
-<section class="cosmic-hero">
-    <div class="hero-orbit">
-        <div class="orbit-path"></div>
-        
-        <!-- Первый спутник - Polysok -->
-        <div class="satellite" id="code-satellite">
-            <div class="satellite-content">
-                <div class="avatar cosmic-avatar">
-                    <div class="avatar-glow"></div>
-                    <!-- Запасной контент для аватара -->
-                    <div class="avatar-placeholder">👨‍💻</div>
+    <!-- Новая крутая герой секция -->
+    <section class="cosmic-hero">
+        <div class="hero-matrix">
+            <!-- Бинарный дождь -->
+            <div class="binary-rain"></div>
+            
+            <!-- Центральный портал -->
+            <div class="quantum-portal">
+                <div class="portal-core">
+                    <div class="portal-rings">
+                        <div class="portal-ring ring-1"></div>
+                        <div class="portal-ring ring-2"></div>
+                        <div class="portal-ring ring-3"></div>
+                    </div>
+                    <div class="portal-energy"></div>
                 </div>
-                <h1 class="cosmic-title">Polysok</h1>
-                <p class="cosmic-subtitle">Fullstack Developer</p>
-                <p class="cosmic-description">Создаю космические решения</p>
-                <div class="tech-constellation">
-                    <span class="tech-star">Python</span>
-                    <span class="tech-star">C#</span>
-                    <span class="tech-star">Go</span>
-                    <span class="tech-star">Unity</span>
-                </div>
-                <a href="portfolio.html#code" class="cosmic-btn">
-                    <span class="btn-glow"></span>
-                    Исследовать проекты
-                </a>
             </div>
-        </div>
 
-        <!-- Второй спутник - Yuaself -->
-        <div class="satellite" id="music-satellite">
-            <div class="satellite-content">
-                <div class="avatar cosmic-avatar">
-                    <div class="avatar-glow"></div>
-                    <!-- Запасной контент для аватара -->
-                    <div class="avatar-placeholder">🎸</div>
+            <!-- Двойная идентичность -->
+            <div class="identity-orbit">
+                <!-- Polysok - Developer -->
+                <div class="identity-card developer-side">
+                    <div class="identity-avatar">
+                        <div class="avatar-hologram">
+                            <div class="hologram-grid"></div>
+                            <div class="avatar-core">👨‍💻</div>
+                        </div>
+                        <div class="avatar-pulse"></div>
+                    </div>
+                    <div class="identity-content">
+                        <h1 class="identity-title">Polysok</h1>
+                        <p class="identity-subtitle">Fullstack Developer</p>
+                        <div class="identity-stats">
+                            <div class="stat">
+                                <span class="stat-value">Python</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="95"></div>
+                                </div>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">C#</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="90"></div>
+                                </div>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">Go</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="85"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="identity-tags">
+                            <span class="tech-tag">Backend</span>
+                            <span class="tech-tag">Unity</span>
+                            <span class="tech-tag">AI/ML</span>
+                            <span class="tech-tag">DevOps</span>
+                        </div>
+                    </div>
+                    <div class="identity-glow"></div>
                 </div>
-                <h1 class="cosmic-title">Yuaself</h1>
-                <p class="cosmic-subtitle">Guitar Astronaut</p>
-                <p class="cosmic-description">Звуки космоса в струнах</p>
-                <div class="tech-constellation">
-                    <span class="tech-star">Progressive</span>
-                    <span class="tech-star">Math Rock</span>
-                    <span class="tech-star">Sokoninaru</span>
-                </div>
-                <a href="portfolio.html#music" class="cosmic-btn">
-                    <span class="btn-glow"></span>
-                    Слушать космос
-                </a>
-            </div>
-        </div>
 
-        <!-- Центральная планета -->
-        <div class="central-planet">
-            <div class="planet-core"></div>
-            <div class="planet-rings">
-                <div class="ring"></div>
-                <div class="ring"></div>
-                <div class="ring"></div>
+                <!-- Yuaself - Musician -->
+                <div class="identity-card musician-side">
+                    <div class="identity-avatar">
+                        <div class="avatar-hologram">
+                            <div class="hologram-grid"></div>
+                            <div class="avatar-core">🎸</div>
+                        </div>
+                        <div class="avatar-pulse"></div>
+                    </div>
+                    <div class="identity-content">
+                        <h1 class="identity-title">Yuaself</h1>
+                        <p class="identity-subtitle">Guitar Astronaut</p>
+                        <div class="identity-stats">
+                            <div class="stat">
+                                <span class="stat-value">Progressive</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="98"></div>
+                                </div>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">Math Rock</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="92"></div>
+                                </div>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">Sokoninaru</span>
+                                <div class="stat-bar">
+                                    <div class="stat-fill" data-level="95"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="identity-tags">
+                            <span class="music-tag">7-String</span>
+                            <span class="music-tag">Tapping</span>
+                            <span class="music-tag">Ambient</span>
+                            <span class="music-tag">Experimental</span>
+                        </div>
+                    </div>
+                    <div class="identity-glow"></div>
+                </div>
             </div>
-            <div class="planet-info">
-                <h2>Инженерно-космический</h2>
-                <p>9"И" класс</p>
-                <p>МАОУ Гимназия №32</p>
-                <p>г. Калининград</p>
+
+            <!-- Центральная информация -->
+            <div class="central-info">
+                <div class="info-hologram">
+                    <h2 class="info-title">Инженерно-космический профиль</h2>
+                    <div class="info-grid">
+                        <div class="info-item">
+                            <span class="info-label">Класс</span>
+                            <span class="info-value">9"И"</span>
+                        </div>
+                        <div class="info-item">
+                            <span class="info-label">Учреждение</span>
+                            <span class="info-value">МАОУ Гимназия №32</span>
+                        </div>
+                        <div class="info-item">
+                            <span class="info-label">Локация</span>
+                            <span class="info-value">г. Калининград</span>
+                        </div>
+                        <div class="info-item">
+                            <span class="info-label">Миссия</span>
+                            <span class="info-value">Код & Музыка</span>
+                        </div>
+                    </div>
+                    <div class="info-quote">
+                        "Две орбиты, одна вселенная возможностей"
+                    </div>
+                </div>
+            </div>
+
+            <!-- Парящие частицы -->
+            <div class="floating-particles">
+                <div class="particle particle-1"></div>
+                <div class="particle particle-2"></div>
+                <div class="particle particle-3"></div>
+                <div class="particle particle-4"></div>
+                <div class="particle particle-5"></div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Быстрая навигация -->
     <section class="quick-nav">
@@ -180,6 +254,4 @@
     <script src="cosmic-effects.js"></script>
     <script src="music-player.js"></script>
 </body>
-
 </html>
-
