Update print statement to farewell message

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,16 @@
                             <span class="tech-tag">Telegram API</span>
                             <span class="tech-tag">SQLite</span>
                         </div>
+                        <div class="project-links">
+                            <a href="https://github.com/polysock/telegram-bots" class="project-link" target="_blank">
+                                <span>Код</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -105,6 +115,16 @@
                             <span class="tech-tag">Unity</span>
                             <span class="tech-tag">OOP</span>
                         </div>
+                        <div class="project-links">
+                            <a href="https://github.com/polysock/unity-games" class="project-link" target="_blank">
+                                <span>Код</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -121,6 +141,16 @@
                             <span class="tech-tag">Go</span>
                             <span class="tech-tag">Backend</span>
                             <span class="tech-tag">Concurrency</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/polysock/go-apps" class="project-link" target="_blank">
+                                <span>Код</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -144,6 +174,15 @@
                                 <p>🎵 Аудио демо временно недоступно</p>
                                 <p><small>Здесь будет моя последняя инструментальная демка</small></p>
                             </div>
+                        </div>
+                        <div class="project-links">
+                            <button class="project-link audio-link">
+                                <span>Слушать</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon>
+                                    <path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path>
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -191,6 +230,15 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="project-links">
+                            <button class="project-link audio-link">
+                                <span>Слушать все</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon>
+                                    <path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -217,6 +265,16 @@
                                 <li>Оптимизация производительности</li>
                                 <li>Современные анимации</li>
                             </ul>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/polysock/web-apps" class="project-link" target="_blank">
+                                <span>Код</span>
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                    <polyline points="15 3 21 3 21 9"></polyline>
+                                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -273,4 +331,3 @@
     <script src="portfolio.js"></script>
 </body>
 </html>
-
