Restore index.html content
Restored the original content of index.html after it was removed.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="avatar-tech">
                             <span>Progressive</span>
                             <span>Math Rock</span>
-                            <span>7-String</span>
+                            <span>Jazzmaster</span>
                         </div>
                     </div>
                 </div>
@@ -221,18 +221,18 @@
                                 <span class="skill-percent">92%</span>
                             </div>
                             <div class="skill-item">
-                                <span class="skill-name">Sokoninaru</span>
+                                <span class="skill-name">Японский рок</span>
                                 <div class="skill-bar">
                                     <div class="skill-progress" style="width: 95%"></div>
                                 </div>
                                 <span class="skill-percent">95%</span>
                             </div>
                             <div class="skill-item">
-                                <span class="skill-name">Импровизация</span>
+                                <span class="skill-name">Любовь к своим инструментам</span>
                                 <div class="skill-bar">
-                                    <div class="skill-progress" style="width: 88%"></div>
+                                    <div class="skill-progress" style="width: 100%"></div>
                                 </div>
-                                <span class="skill-percent">88%</span>
+                                <span class="skill-percent">100%</span>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Космические проекты</h2>
-                <p>Мои лучшие работы в программировании и музыке</p>
+                <p>Мои одни из лучших работ в программировании и музыке</p>
             </div>
 
             <div class="projects-showcase">
@@ -284,10 +284,10 @@
                 <div class="project-card">
                     <div class="project-content">
                         <h3>Музыкальные демо</h3>
-                        <p>Инструментальные композиции в стиле прогрессив-рок и математический рок</p>
+                        <p>Мои последние демо-записи</p>
                         <div class="project-tech">
                             <span>Гитара</span>
-                            <span>Прогрессив</span>
+                            <span>Записи</span>
                             <span>Собственное</span>
                         </div>
                         <a href="portfolio.html" class="project-link">
@@ -346,7 +346,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Polysok / Yuaself. Запуск с планеты Земля 🪐</p>
-                <p>Сайт создан для конкурса в номинации "Хобби"</p>
+                <p>Сайт создан для конкурса в номинации "Хобби и увлечения"</p>
             </div>
         </div>
     </footer>
@@ -355,3 +355,4 @@
     <script src="cosmic-effects.js"></script>
 </body>
 </html>
+
