--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="about-intro">
-                    <h1>Глумов<span class="accent"> </span>Александр</h1>
+                    <h1>Глумов Александр<span class="accent">
                     <p class="subtitle">Разработчик & Музыкант</p>
                     <p class="description">
                         Ученик 9"И" инженерно-космического класса<br>
@@ -253,6 +253,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
