Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>🚀 Polysok / Yuaself</h3>
+                    <h3>🚀 Глумов Александр</h3>
                     <p>Ученик 9"И" инженерно-космического класса</p>
                     <p class="school-info">МАОУ Гимназия №32 г. Калининграда</p>
                     <p class="footer-quote">"Код и музыка - мои космические корабли"</p>
@@ -355,4 +355,5 @@
     <script src="cosmic-effects.js"></script>
 </body>
 </html>
+
 
