Fix HTML formatting issues and improve structure

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="hero-stats">
                     <div class="stat">
                         <div class="stat-number">2+</div>
-                        <div class="stat-label">года в IT</div>
+                        <div class="stat-label">лет в IT</div>
                     </div>
                     <div class="stat">
                         <div class="stat-number">15+</div>
@@ -355,5 +355,6 @@
     <script src="cosmic-effects.js"></script>
 </body>
 </html>
+
 
 
