--- a/about.html
+++ b/about.html
@@ -131,6 +131,10 @@
                                 <span class="stat-name">Изучаемых технологий</span>
                                 <span class="stat-value">5+</span>
                             </div>
+                            <div class="stat-item">
+                                <span class="stat-name">Часов за гитарой</span>
+                                <span class="stat-value">2000+</span>
+                            </div>
                         </div>
                     </div>
 
@@ -253,6 +257,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
