--- a/contacts.html
+++ b/contacts.html
@@ -60,7 +60,7 @@
                     <div class="connection-stat">
                         <div class="stat-icon">⚡</div>
                         <div class="stat-info">
-                            <div class="stat-value">~1 мин</div>
+                            <div class="stat-value">~2-3 часа</div>
                             <div class="stat-label">среднее время ответа</div>
                         </div>
                     </div>
@@ -102,15 +102,15 @@
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Адрес</span>
-                                <span class="detail-value">г. Калининград, ул. Подполковника Иванникова, 6</span>
+                                <span class="detail-value">г. Калининград, ул. Сергея Тюленина, 2</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Телефон</span>
-                                <span class="detail-value">+7 (4012) 65-17-79</span>
+                                <span class="detail-value">+7 (4012) 46-16-46</span>
                             </div>
                             <div class="detail-item">
                                 <span class="detail-label">Сайт</span>
-                                <a href="https://gymnasium32.org" class="detail-link" target="_blank">gymnasium32.org</a>
+                                <a href="https://gymnasium32.org" class="detail-link" target="_blank">https://sh32-kaliningrad-r27.gosweb.gosuslugi.ru/</a>
                             </div>
                         </div>
                         <div class="school-glow"></div>
@@ -284,7 +284,7 @@
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>Играю на электрогитарах Ibanez и LTD, предпочитаю 7-струнные модели для прогрессивного и математического рока. Особенно вдохновляюсь японской группой Sokoninaru.</p>
+                            <p>Играю на электрогитарах JET JL 500 VS и Squier CV 60s Jazzmaster LRL OWT. Особенно вдохновляюсь японской группой Sokoninaru.</p>
                         </div>
                     </div>
                     
@@ -304,7 +304,7 @@
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>Да, работаю над несколькими инструментальными композициями в стиле прогрессивного рока. Следите за обновлениями на YouTube и SoundCloud!</p>
+                            <p>Да, работаю над несколькими инструментальными композициями. Следите за обновлениями на YouTube и SoundCloud!</p>
                         </div>
                     </div>
                     
@@ -337,7 +337,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>🚀 Polysok / Yuaself</h3>
+                    <h3>🚀 Глумов Александр</h3>
                     <p>Ученик 9"И" инженерно-космического класса</p>
                     <p class="school-info">МАОУ Гимназия №32 г. Калининграда</p>
                     <p class="footer-quote">"Код и музыка - мои космические корабли"</p>
@@ -498,3 +498,4 @@
     </script>
 </body>
 </html>
+
